--- a/embedded_program/platformio.ini
+++ b/embedded_program/platformio.ini
@@ -12,5 +12,7 @@
 platform = ststm32
 board = nucleo_f446re
 framework = arduino
-lib_deps = stm32duino/STM32duino X-NUCLEO-IHM02A1@^1.0.2
+lib_deps = 
+	stm32duino/STM32duino X-NUCLEO-IHM02A1@^1.0.2
+	adafruit/Adafruit SSD1306@^2.5.9
 monitor_speed = 115200
