--- a/embedded_program/platformio.ini
+++ b/embedded_program/platformio.ini
@@ -11,6 +11,16 @@
 [env:nucleo_f446re]
 platform = ststm32
 board = nucleo_f446re
+
+; [env:nucleo_f401re]
+; platform = ststm32
+; board = nucleo_f401re
+
+; [env:nucleo_l452re]
+; platform = ststm32
+; board = nucleo_l452re
+
+
 framework = arduino
 lib_deps = 
 	stm32duino/STM32duino X-NUCLEO-IHM02A1@^1.0.2
