--- a/embedded_program/platformio.ini
+++ b/embedded_program/platformio.ini
@@ -8,17 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nucleo_f446re]
-platform = ststm32
-board = nucleo_f446re
+; [env:nucleo_f446re]
+; platform = ststm32
+; board = nucleo_f446re
 
 ; [env:nucleo_f401re]
 ; platform = ststm32
 ; board = nucleo_f401re
 
-; [env:nucleo_l452re]
-; platform = ststm32
-; board = nucleo_l452re
+[env:nucleo_l452re]
+platform = ststm32
+board = nucleo_l452re
 
 
 framework = arduino
