--- a/embedded_program/platformio.ini
+++ b/embedded_program/platformio.ini
@@ -20,9 +20,10 @@
 platform = ststm32
 board = nucleo_l452re
 
-
 framework = arduino
 lib_deps = 
 	stm32duino/STM32duino X-NUCLEO-IHM02A1@^1.0.2
 	adafruit/Adafruit SSD1306@^2.5.9
+	adafruit/Adafruit GFX Library@^1.11.9
+	adafruit/Adafruit BusIO@^1.16.0
 monitor_speed = 115200
