--- a/embedded_program/platformio.ini
+++ b/embedded_program/platformio.ini
@@ -8,13 +8,18 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-; [env:nucleo_f446re]
-; platform = ststm32
-; board = nucleo_f446re
+[env:nucleo_f446re]
+platform = ststm32
+board = nucleo_f446re
 
 ; [env:nucleo_f401re]
 ; platform = ststm32
 ; board = nucleo_f401re
+
+[common]
+lib_deps_builtin =
+    adafruit/Adafruit BusIO
+	adafruit/Adafruit GFX Library
 
 [env:nucleo_l452re]
 platform = ststm32
@@ -24,6 +29,5 @@ framework = arduino
 lib_deps = 
 	stm32duino/STM32duino X-NUCLEO-IHM02A1@^1.0.2
 	adafruit/Adafruit SSD1306@^2.5.9
-	adafruit/Adafruit GFX Library@^1.11.9
-	adafruit/Adafruit BusIO@^1.16.0
+	
 monitor_speed = 9600
