--- a/embedded_program/platformio.ini
+++ b/embedded_program/platformio.ini
@@ -8,19 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[common]
-lib_deps_builtin =
-    adafruit/Adafruit BusIO
-	adafruit/Adafruit GFX Library
-framework = arduino
-lib_deps = 
-	stm32duino/STM32duino X-NUCLEO-IHM02A1@^1.0.2
-	adafruit/Adafruit SSD1306@^2.5.9
-monitor_speed = 9600
 
-[env:nucleo_f446re]
-platform = ststm32
-board = nucleo_f446re
+; [env:nucleo_f446re]
+; platform = ststm32
+; board = nucleo_f446re
 
 ; [env:nucleo_f401re]
 ; platform = ststm32
@@ -29,3 +20,12 @@ board = nucleo_f446re
 [env:nucleo_l452re]
 platform = ststm32
 board = nucleo_l452re
+
+lib_deps_builtin =
+    adafruit/Adafruit BusIO
+	adafruit/Adafruit GFX Library
+framework = arduino
+lib_deps = 
+	stm32duino/STM32duino X-NUCLEO-IHM02A1@^1.0.2
+	adafruit/Adafruit SSD1306@^2.5.9
+monitor_speed = 9600
