--- a/embedded_program/platformio.ini
+++ b/embedded_program/platformio.ini
@@ -28,4 +28,5 @@ framework = arduino
 lib_deps = 
 	stm32duino/STM32duino X-NUCLEO-IHM02A1@^1.0.2
 	adafruit/Adafruit SSD1306@^2.5.9
+	;unity
 monitor_speed = 9600
