--- a/embedded_program/platformio.ini
+++ b/embedded_program/platformio.ini
@@ -17,10 +17,17 @@
 ; platform = ststm32
 ; board = nucleo_f401re
 
+; Robot's env
 [env:nucleo_l452re]
 platform = ststm32
 board = nucleo_l452re
 
+; [env:disco_h747xi]
+; platform = ststm32
+; board = disco_h747xi
+; board_build.mcu = stm32h747xih6
+
+[env]
 lib_deps_builtin =
     adafruit/Adafruit BusIO
 	adafruit/Adafruit GFX Library
@@ -30,3 +37,4 @@ lib_deps =
 	adafruit/Adafruit SSD1306@^2.5.9
 	;unity
 monitor_speed = 9600
+check_tool = clangtidy
